# internal/handler/history/handler.go
@@ -11,10 +11,10 @@ import (
 )
 
 type HistoryHandler struct {
-	service requester
+	service historian
 }
 
-func NewHandler(svc requester) *HistoryHandler {
+func NewHandler(svc historian) *HistoryHandler {
 	return &HistoryHandler{service: svc}
 }
 
@@ -32,7 +32,7 @@ type historyUrl struct {
 	Url string `json:"url"`
 }
 
-func requestHandler(service requester, w http.ResponseWriter, r *http.Request) {
+func requestHandle(service requester, w http.ResponseWriter, r *http.Request) {
 	userId, uierr := userIdParse(w, r, "User specified incorrectly")
 	if uierr != nil {
 		return
@@ -66,10 +66,41 @@ func requestHandler(service requester, w http.ResponseWriter, r *http.Request) {
 	w.Write(jsonRepr)
 }
 
+func filenameParse(w http.ResponseWriter, r *http.Request, message string) (string, error) {
+	args := strings.Split(r.URL.Path, "/")[2:]
+	if len(args) > 1 {
+		hrf.NewErrorResponse(r, message).Send(w, http.StatusUnprocessableEntity)
+		return "", fmt.Errorf("Wrong request")
+	}
+	return strings.Split(args[0], "?")[0], nil
+}
+
+func downloadHandle(service downloader, w http.ResponseWriter, r *http.Request) {
+	filename, err := filenameParse(w, r, "Filename specified incorrectly")
+	if err != nil {
+		return
+	}
+	if file, err := service.DownloadFile(r.Context(), filename); err != nil {
+		hrf.NewErrorResponse(r, "File not found").Send(w, http.StatusNotFound)
+		return
+	} else {
+		w.Header().Add("Content-Disposition", fmt.Sprintf(`attachment; filename="%s"`, filename))
+		w.WriteHeader(http.StatusOK)
+		w.Write(file)
+	}
+}
+
 func (this *HistoryHandler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	switch r.Method {
 	case http.MethodGet:
-		requestHandler(this.service, w, r)
+		if handle := strings.Split(r.URL.Path, "/")[1]; handle == "history" {
+			requestHandle(this.service, w, r)
+			return
+		} else if handle == "download" {
+			downloadHandle(this.service, w, r)
+			return
+		}
+		fallthrough
 	default:
 		w.Header().Set("Allow", fmt.Sprint(http.MethodPost, ", ", http.MethodDelete))
 		hrf.NewErrorResponse(r, "API doesn't support the method").
